# Sime

./: .gitattributes  .gitignore  AGENTS.md  BATCH_BACK_OPTIMIZATION.md  CLAUDE.md  CMakeLists.txt  FAST_NETSTATES_DEBUG.md  FCITX5_DESIGN.md  FCITX5_GUIDE.md  FCITX5_IMPLEMENTATION.md  LICENSE  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PRIVACY.md  QUICK_START_OPTIMIZATIONS.md  README.md  SIMD_PGO_DESIGN.md  SIMD_PGO_IMPLEMENTATION.md  STATE_OPTIMIZATION_STATUS.md  TODO  TRAINING.md  benchmark_optimizations.sh  extract_corpus.py  extract_wiki.py  freq_dict.txt  gen_dicts.py  gen_token_pinyin.py  get_sunpinyin_data.sh  pgo_training_data.txt  pinyin_token_dict.txt  test_inputs.txt  trie_conv.cc
Android/: BUILD.md
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: emoji.txt  sime.ft.dict.txt
Android/app/src/main/java/com/isma/sime/: SettingsActivity.java  SimeEngine.java  SimeService.java
Android/app/src/main/java/com/isma/sime/ime/: ChineseLayout.java  InputAction.java  InputKernel.java  InputState.java  InputView.java  KeyboardMode.java  PinyinUtil.java
Android/app/src/main/java/com/isma/sime/ime/candidates/: CandidatesBar.java  ExpandedCandidatesView.java
Android/app/src/main/java/com/semantic/sime/: QuickPhraseEditActivity.java  SettingsActivity.java  SimeEngine.java  SimeService.java
Android/app/src/main/java/com/semantic/sime/ime/: ChineseLayout.java  InputAction.java  InputKernel.java  InputState.java  InputView.java  KeyboardMode.java  PinyinUtil.java
Android/app/src/main/java/com/shiyu/sime/: QuickPhraseEditActivity.java  SettingsActivity.java  SimeEngine.java  SimeService.java
Android/app/src/main/java/com/shiyu/sime/ime/: ChineseLayout.java  InputAction.java  InputKernel.java  InputState.java  InputView.java  KeyboardMode.java  PinyinUtil.java
Android/app/src/main/jni/: CMakeLists.txt  sime_jni.cc
Android/app/src/main/res/drawable/: ic_globe.xml  ic_settings_clipboard.xml  ic_settings_dialpad.xml  ic_settings_emoji.xml  ic_settings_keyboard.xml  ic_settings_keyboard_alt.xml  ic_settings_lightbulb.xml  ic_settings_quote.xml  ic_settings_translate.xml  ic_settings_vibration.xml  ic_settings_volume.xml  ic_symbol.xml  key_bg.xml  key_popup_bg.xml
Android/app/src/main/res/layout/: input_view_number.xml  input_view_settings.xml  input_view_symbol.xml
Android/app/src/main/res/values/: colors.xml
Android/app/src/main/res/xml/: method.xml
Android/app/src/test/java/com/isma/sime/ime/: InputKernelTest.java  InputStateTest.java
Android/app/src/test/java/com/semantic/sime/ime/: InputKernelTest.java  InputStateTest.java
Android/app/src/test/java/com/shiyu/sime/ime/: InputKernelTest.java  InputStateTest.java
Linux/fcitx5/: CMakeLists.txt  README.md  sime-state.cc  sime-state.h  sime.cc  sime.h
Linux/fcitx5/data/: sime-addon.conf.in  sime.conf.in
Linux/fcitx5/src/: sime-ime.cc  sime-ime.h  sime-state.h  sime.cc
Linux/package/: PKGBUILD
android/: BUILD.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/isma/sime/: SettingsActivity.java  SimeEngine.java  SimeInputMethodService.java
android/app/src/main/jni/: CMakeLists.txt  sime_jni.cc
android/app/src/main/res/drawable/: ic_backspace.xml  ic_enter.xml  key_bg.xml  key_bg_accent.xml  key_bg_dark.xml
android/app/src/main/res/layout/: input_view.xml  input_view_number.xml  input_view_t9.xml  key_popup.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: method.xml
app/: compact.cc  compare.cc  compress.cc  constructor.cc  converter.cc  counter.cc  cutter.cc  dump.cc  interpreter.cc  segmenter.cc
data/: sime.nine
docs/: COMPACT_TUTORIAL.md  CONSTRUCTOR_TUTORIAL.md  KenLM-TODOs.md  PRUNE_TUTORIAL.md  T9-TRAINING.md  TRAINING.md  TRAINING_BPE.md  TRAIN_THUC.md  TRAIN_V1.md  TRAIN_WIKI.md  candidate-params.md  t9-pinyin-decoder.md
fcitx5/: CMakeLists.txt  README.md  sime-state.cc  sime-state.cpp  sime-state.h  sime.cc  sime.cpp  sime.h
fcitx5/data/: sime-addon.conf.in  sime.conf.in
include/: cache.h  common.h  compact.h  compress.h  construct.h  context.h  convert.h  count.h  cut.h  dict.h  interpret.h  nine.h  piece.h  score.h  segment.h  selection_manager.h  sentence.h  sime.h  state.h  t9.h  trie.h  unit.h  user.h  userdict.h  ustr.h
logo/: README.md  generate_logo.py  generate_macos_logo.py  generate_menubar_icns.sh  sime.icns  sime_minimal.icns
macOS/: .gitignore  CMakeLists.txt
macOS/api/: sime_api.cc  sime_api.h
macOS/package/: build_pkg.sh
macOS/package/pkg-scripts/: postinstall
macOS/resources/: Info.plist  sime.tiff
macOS/resources/zh_CN.lproj/: InfoPlist.strings
macOS/sources/: Main.swift  SimeInputController.swift  SimePanel.swift  SimeView.swift
macos/: CMakeLists.txt  README.md  install.sh
macos/SimeIME/SimeIME/: Info.plist  SimeCandidatesWindow.h  SimeCandidatesWindow.mm  SimeEngine.h  SimeEngine.mm  SimeInputController.h  SimeInputController.mm  main.m
package/: PKGBUILD
packaging/: .gitignore  PKGBUILD
pipeline/: Makefile  cases.1.txt  cases.num.2.txt  cut.py  en_dict.raw.3  en_dict.raw.ext  en_landmines.txt  gen_dict.py  gen_emoji.py  gen_ft_dict.py  japan_chars.txt  merge.cc  merge_ngram.py  parallel_count.sh  punct.txt  review.py  test.py  upgrade_dict.py
pipeline/en/: Makefile  extract_tokens.py  gen_token_dict.py
pipeline/nine/: Makefile  gen_count_data.py  gen_pinyin_dict.py
scripts/: build_fcitx5.sh  gen_freq_dict.py  pgo_all.sh  pgo_build.sh  pgo_clean.sh  pgo_generate.sh  tokenize_corpus.py
sime/: Makefile  cases.2.txt  cases.num.1.txt  count.cc  gen_dict.py  gen_testset.py  gen_units.py  review.py
sime/nine/: gen_pinyin_corpus.py
src/: cache.cc  cache_trie.cc  compact.cc  compress.cc  construct.cc  context.cc  convert.cc  count.cc  cut.cc  data.inc  dict.cc  interpret.cc  nine.cc  piece.cc  score.cc  segment.cc  selection_manager.cc  sentence.cc  sime.cc  state.cc  t9.cc  trie.cc  unit.cc  user.cc  userdict.cc  ustr.cc
(+104 files in other folders)
